# dethrace

./: AGENTS.md  CMakeLists.txt  README.md
docs/: CONFIGURATION.md
src/DETHRACE/: CMakeLists.txt  main.c
src/DETHRACE/common/: controls.c  globvars.c  globvars.h  graphics.c  pedestrn.c  powerup.c  utility.c
src/DETHRACE/pc-all/: allsys.c
src/S3/: CMakeLists.txt  s3_defs.h  s3sound.c
src/S3/include/s3/: s3.h
src/harness/: CMakeLists.txt  harness.c
src/harness/audio/: null.c  sdl2.c  sdl3.c
src/harness/imgui/: CMakeLists.txt  imconfig_bigendian.h  imgui_manager.cpp  imgui_manager.h
src/harness/include/harness/: audio.h  config.h  hooks.h
webos/: README.md  webos.patch
webos/dethrace-ipk/: appinfo.json  dethrace.ini
